dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/pj_init.c)
AM_INIT_AUTOMAKE(proj, 4.4.1)
AM_CONFIG_HEADER(src/proj_config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL

dnl Checks for libraries.
AC_CHECK_LIB(m,exp,,,)

dnl We check for headers
AC_HEADER_STDC

AC_OUTPUT(Makefile src/Makefile man/Makefile man/man1/Makefile \
	man/man3/Makefile nad/Makefile)
